created database context, added team and created a view model for it

--- a/SportStatTracker/SportStatTracker/SportStatTracker.csproj
+++ b/SportStatTracker/SportStatTracker/SportStatTracker.csproj
@@ -108,6 +108,7 @@
     </Compile>
     <Compile Include="ViewModels\AddGameViewModel.cs" />
     <Compile Include="ViewModels\AddPlayerViewModel.cs" />
+    <Compile Include="ViewModels\AddStatViewModel.cs" />
     <Compile Include="ViewModels\AddTeamViewModel.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
@@ -118,6 +119,9 @@
     </Compile>
     <Compile Include="Views\AddPlayer.xaml.cs">
       <DependentUpon>AddPlayer.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AddStat.xaml.cs">
+      <DependentUpon>AddStat.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\AddTeam.xaml.cs">
       <DependentUpon>AddTeam.xaml</DependentUpon>
@@ -151,6 +155,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\AddPlayer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AddStat.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
